fixed word wrap issue on discussions

--- a/lms/static/sass/_discussion.scss
+++ b/lms/static/sass/_discussion.scss
@@ -1260,6 +1260,10 @@ body.discussion {
     padding: 40px;
     min-height: 468px;
 
+    a {
+      word-wrap: break-word;
+    }
+
     h1 {
       margin-bottom: 10px;
       font-size: 28px;
